# account-rust

./: Cargo.toml  README.md
migrations/: 001_create_table_users.sql
src/: config.rs  main.rs  routes.rs
src/database/: users.rs
src/handlers/: users.rs
src/models/: users.rs
